@@ -1,3 +1,8 @@
+1999-11-02  Katsumi Yamaoka   <yamaoka@jpl.org>
+
+	* poe-18.el (file-executable-p): New function.
+
+
 1999-10-22  Katsumi Yamaoka   <yamaoka@jpl.org>
 
 	* APEL: Version 9.23 released.
